View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0028449 | Open CASCADE | OCCT:Data Exchange | public | 2017-02-09 17:03 | 2017-09-29 16:25 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.2.0 | Fixed in Version | 7.2.0 | ||
Summary | 0028449: Data Exchange - Wrong orientation of Annotation Plane in GD&T | ||||
Description | Need to fix mistake in reading of GDT&T annotation plane from STEP. Now axes are mixed up. | ||||
Steps To Reproduce | bugs step bug28449 | ||||
Tags | No tags attached. | ||||
Test case number | bugs step bug28449 | ||||
|
Branch CR28449 has been created by ika. SHA-1: c6dd291811c9c4a23ee58e6123be9481536f8b90 Detailed log of new commits: Author: ika Date: Wed Mar 22 10:31:58 2017 +0300 0028449: Data Exchange - Wrong orientation of Annotation Plane in GD&T Fix orientation. |
|
Dear GKA, could you please review branch CR28449? |
|
Branch CR28449 is ready to be tested. |
|
Dear BugMaster, Branch CR28449 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: c6dd291811c9c4a23ee58e6123be9481536f8b90 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) products component : Linux: 64 (64 on master) Windows: 0 (0 on master) MacOS : 1208 Regressions/Differences/Improvements: http://occt-tests/CR28449-master-OCCT/Debian70-64/gdt/dimensions/A8.html http://occt-tests/CR28449-master-OCCT/Windows-64-VC10/gdt/dimensions/A8.html gdt dimensions A8: FAILED http://occt-tests/CR28449-master-Products/Debian70-64/summary.html http://occt-tests/CR28449-master-Products/Windows-64-VC10/summary.html Failed: pmivis import duplicate pmivis import places pmivis import select Testing cases: http://occt-tests/CR28449-master-OCCT/Debian70-64/bugs/step/bug28449.html http://occt-tests/CR28449-master-OCCT/Windows-64-VC10/bugs/step/bug28449.html bugs step bug28449: OK Testing on Linux: occt component : Total MEMORY difference: 92878424 / 92534299 [+0.37%] Total CPU difference: 20227.670000000187 / 20187.010000000108 [+0.20%] products component : Total MEMORY difference: 31054429 / 31083897 [-0.09%] Total CPU difference: 5450.039999999978 / 5408.779999999975 [+0.76%] Testing on Windows: occt component : Total MEMORY difference: 57783809 / 57782265 [+0.00%] Total CPU difference: 18690.152207898518 / 18782.551600198512 [-0.49%] products component : Total MEMORY difference: 22292044 / 22254740 [+0.17%] Total CPU difference: 5417.711928699978 / 5421.409152399973 [-0.07%] There are following differences in images found by testdiff. http://occt-tests/CR28449-master-Products/Debian70-64/diff-Debian70-64.html http://occt-tests/CR28449-master-Products/Windows-64-VC10/diff-Windows-64-VC10-image.html IMAGE pmivis import nist_ct_08_inch: nist_ct_08_inch.png differs IMAGE pmivis import nist_ct_06_inch: nist_ct_06_inch.png differs IMAGE pmivis import nist_ct_08_mm: nist_ct_08_mm.png differs IMAGE pmivis import nist_ct_06_mm: nist_ct_06_mm.png differs IMAGE pmivis import nist_ctc_05: nist_ctc_05.png differs IMAGE pmivis import nist_ct_09_mm: nist_ct_09_mm.png differs IMAGE pmivis import nist_ctc_04: nist_ctc_04.png differs IMAGE pmivis import nist_ct_09_inch: nist_ct_09_inch.png differs IMAGE pmivis import nist_ctc_01: nist_ctc_01.png differs IMAGE pmivis import nist_ctc_03: nist_ctc_03.png differs http://occt-tests/CR28449-master-Products/Windows-64-VC10/diff-Windows-64-VC10-image.html IMAGE pmivis import duplicate: duplicate.png differs IMAGE pmivis import places: places.png differs IMAGE pmivis import select: select.png differs |
|
Dear ika, Branch CR28449 has been rejected due to: - regressions/differences/improvements - differences in images |
|
Branch CR28449 has been updated forcibly by ika. SHA-1: 8eb7efa295abbac20c2c88544ac8c39976c09b3c |
|
Dear MKV, test case gdt dimensions A8 was fixed, its old reference data was wrong; regressions in products should be fixed by patch for products CR28449, please use it for testing. |
|
Branch CR28449 has been updated forcibly by mkv. SHA-1: 5bf9c4133350a2c1c6cef422fc1e4cc7d84067ad |
|
Dear BugMaster, Branch CR28449 from occt git-repository and branch CR28449 from products git-repository was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 5bf9c4133350a2c1c6cef422fc1e4cc7d84067ad SHA-1: 4319d9d3e224de6b084764b27d15fa5116fdc259 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) products component : Linux: 64 (64 on master) Windows: 0 (0 on master) MacOS : 1205 Regressions/Differences/Improvements: No regressions/differences Testing cases: http://occt-tests/CR28449-CR28449-OCCT/Debian70-64/bugs/step/bug28449.html http://occt-tests/CR28449-CR28449-OCCT/Windows-64-VC10/bugs/step/bug28449.html bugs step bug28449: OK Testing on Linux: occt component : Total MEMORY difference: 93398881 / 92437751 [+1.04%] Total CPU difference: 20134.290000000135 / 20023.430000000128 [+0.55%] products component : Total MEMORY difference: 31159539 / 31030533 [+0.42%] Total CPU difference: 5449.429999999973 / 5449.019999999973 [+0.01%] Testing on Windows: occt component : Total MEMORY difference: 57768252 / 57766343 [+0.00%] Total CPU difference: 18836.434345598504 / 18379.710217898588 [+2.48%] products component : Total MEMORY difference: 22319877 / 22281694 [+0.17%] Total CPU difference: 5470.549467399966 / 5345.280664399969 [+2.34%] There are no differences in images found by testdiff. |
|
Dear BugMaster, Branch CR28449 from occt git-repository and branch CR28449 from products git-repository are TESTED. |
|
Branch CR28449 has been deleted by kgv. SHA-1: 5bf9c4133350a2c1c6cef422fc1e4cc7d84067ad |
occt: master ea6e5378 2017-03-22 07:31:58
Committer: bugmaster Details Diff |
0028449: Data Exchange - Wrong orientation of Annotation Plane in GD&T Fix orientation. update test cases |
Affected Issues 0028449 |
|
mod - src/STEPCAFControl/STEPCAFControl_Reader.cxx | Diff File | ||
add - tests/bugs/step/bug28449 | Diff File | ||
mod - tests/gdt/dimensions/A8 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2017-02-09 17:03 |
|
New Issue | |
2017-02-09 17:03 |
|
Assigned To | => ika |
2017-03-22 16:39 | git | Note Added: 0064626 | |
2017-03-22 16:40 |
|
Note Added: 0064627 | |
2017-03-22 16:40 |
|
Assigned To | ika => gka |
2017-03-22 16:40 |
|
Status | new => resolved |
2017-03-22 16:40 |
|
Steps to Reproduce Updated | |
2017-03-22 16:49 | gka | Note Added: 0064628 | |
2017-03-22 16:49 | gka | Assigned To | gka => bugmaster |
2017-03-22 16:49 | gka | Status | resolved => reviewed |
2017-03-22 16:50 |
|
Assigned To | bugmaster => mkv |
2017-03-23 16:08 |
|
Note Added: 0064659 | |
2017-03-23 16:08 |
|
Note Added: 0064660 | |
2017-03-23 16:08 |
|
Assigned To | mkv => ika |
2017-03-23 16:08 |
|
Status | reviewed => assigned |
2017-03-23 16:09 |
|
Test case number | => bugs step bug28449 |
2017-03-23 16:35 | git | Note Added: 0064663 | |
2017-03-23 16:39 |
|
Note Added: 0064664 | |
2017-03-23 16:39 |
|
Assigned To | ika => mkv |
2017-03-23 16:39 |
|
Status | assigned => feedback |
2017-03-23 18:41 | git | Note Added: 0064669 | |
2017-03-24 17:22 |
|
Note Added: 0064691 | |
2017-03-24 17:23 |
|
Note Added: 0064692 | |
2017-03-24 17:23 |
|
Assigned To | mkv => bugmaster |
2017-03-24 17:23 |
|
Status | feedback => tested |
2017-03-31 17:28 | bugmaster | Changeset attached | => occt master ea6e5378 |
2017-03-31 17:28 | bugmaster | Status | tested => verified |
2017-03-31 17:28 | bugmaster | Resolution | open => fixed |
2017-05-12 11:35 | git | Note Added: 0065911 | |
2017-09-29 16:18 |
|
Fixed in Version | => 7.2.0 |
2017-09-29 16:25 |
|
Status | verified => closed |