0028449: Data Exchange - Wrong orientation of Annotation Plane in GD&T

Fix orientation.
update test cases